ci-cd: remove TESTCONTAINERS_DOCKER_SOCKET_OVERRIDE variable and add MAVEN_OPTS and TESTCONTAINERS_CHECKS_DISABLE variables